--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,24 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="assets/scripts/cytoscape.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
+
+
+  <script >
+
+
+
+
+   var i = 0;
+   var highlightNextEle = function(){
+
+   };
+
+//    // kick off first highlight
+//    highlightNextEle()
+  </script>
 </body>
 </html>
